# vehicledamagedetection

./: .env  .env.example  Dockerfile  README.md  app.py  dataset_class.py  eval.py  pyproject.toml  train.py  training_pipeline.py  utils.py
runs/vehicle_damage_detection/: events.out.tfevents.1727692585.thomas-Victus-by-HP-16-Laptop-PC-e0965nd.414244.0
